spring-mongo-docker-kubernetes/kubernates-application-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: application-service
  labels:
    name: application-service
spec:
  selector: 
    app: application-service
  type: NodePort
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
    nodePort: 30000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: application-deployment
  labels:
    app: application-service
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: application-service
  template:
    metadata:
      labels:
        app: application-service
    spec:
      containers:
      - name: application-container
        image: khushi1701/spring-mongo-docker-kubernetes
        ports:
        - containerPort: 3000
